// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试 Tab card disabled 1`] = `
.c1 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c4 + .c2 {
  margin-left: 8px;
}

.c3 {
  background: transparent;
  border: none;
  padding: 0;
  color: rgba(221,221,221,1);
  font-weight: 400;
  font-size: 14px;
  cursor: not-allowed;
}

.c3 + .c2 {
  margin-left: 8px;
}

.c5 .c2 {
  min-height: 32px;
  padding: 0 0 8px 0;
}

.c6 .c2 {
  height: 30px;
  padding: 0 14px;
  line-height: 1;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  border: 1px solid transparent;
  margin-right: 0px;
  background-color: rgba(248,248,248,1);
  border-bottom-color: rgba(238,238,238,1);
}

.c0 .c2 {
  height: 30px;
  padding: 0 14px;
  line-height: 1;
}

.c0::before {
  content: '';
  display: block;
  position: absolute;
  top: 8px;
  right: -1px;
  height: 14px;
  width: 1px;
  background: rgba(238,238,238,1);
}

.c0:last-child {
  border-top-right-radius: 2px;
  margin-right: 0;
}

<div
  className="c0"
>
  <button
    className="c1 c2 c3 muya-tab-item"
    disabled={true}
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`测试 Tab card 正常情况 1`] = `
.c1 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c3 {
  background: transparent;
  border: none;
  padding: 0;
  color: rgba(26,122,248,1);
  font-weight: 400;
  font-size: 14px;
  cursor: pointer;
}

.c3:hover {
  color: rgba(51,139,255,1);
}

.c3:active {
  color: rgba(12,108,235,1);
}

.c3 + .c2 {
  margin-left: 8px;
}

.c4 + .c2 {
  margin-left: 8px;
}

.c5 .c2 {
  min-height: 32px;
  padding: 0 0 8px 0;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  border: 1px solid transparent;
  margin-right: 0px;
  border-color: rgba(238,238,238,1);
  border-bottom: none;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  background-color: rgba(255,255,255,1);
  z-index: 1;
}

.c0 .c2 {
  height: 30px;
  padding: 0 14px;
  line-height: 1;
}

.c0::before {
  content: '';
  display: block;
  position: absolute;
  top: 8px;
  right: -1px;
  height: 14px;
  width: 1px;
  background: rgba(238,238,238,1);
}

.c0:last-child {
  border-top-right-radius: 2px;
  margin-right: 0;
}

<div
  className="c0"
>
  <button
    className="c1 c2 c3 muya-tab-item"
    disabled={false}
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`测试 Tab line disabled 1`] = `
.c1 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c4 + .c2 {
  margin-left: 8px;
}

.c3 {
  background: transparent;
  border: none;
  padding: 0;
  color: rgba(221,221,221,1);
  font-weight: 400;
  font-size: 14px;
  cursor: not-allowed;
}

.c3 + .c2 {
  margin-left: 8px;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  margin-right: 32px;
}

.c0 .c2 {
  min-height: 32px;
  padding: 0 0 8px 0;
}

<div
  className="c0"
>
  <button
    className="c1 c2 c3 muya-tab-item"
    disabled={true}
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`测试 Tab line 正常情况 1`] = `
.c1 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c3 {
  background: transparent;
  border: none;
  padding: 0;
  color: rgba(26,122,248,1);
  font-weight: 400;
  font-size: 14px;
  cursor: pointer;
}

.c3:hover {
  color: rgba(51,139,255,1);
}

.c3:active {
  color: rgba(12,108,235,1);
}

.c3 + .c2 {
  margin-left: 8px;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  margin-right: 32px;
}

.c0 .c2 {
  min-height: 32px;
  padding: 0 0 8px 0;
}

<div
  className="c0"
>
  <button
    className="c1 c2 c3 muya-tab-item"
    disabled={false}
    onClick={[Function]}
    type="button"
  />
</div>
`;
